2013-12-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix infinite loop on verbatim input.

	* src/filterlatex.cpp (FilterLatex::GetNextToken):
	  - Update buffer after comsumeToken(), so next reads won't get the
	    same contents again.

	Thanks Neutron Soutmun for the report and patch.

2013-12-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Post-release version suffix added.

2013-10-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac, NEWS:
	=== Version 0.5.1 ===

2013-10-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Adjust FilterRTF::GetNextToken() to prevent overflow.

	* src/convutil.h, src/convutil.cpp (+Ascii2WcsNCopy, +Ascii2WcsNCat):
	  - Add utility functions for copying ASCII to wide char string
	    within limited count.
	* src/filterrtf.cpp (FilterRTF::GetNextToken):
	  - Check for token size before writing to prevent buffer overflow.

	TODO: Use C++ wstring and string instead?

2013-10-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Adjust FilterHtml::GetNextToken() to prevent overflow.

	* src/filterhtml.cpp (FilterHtml::GetNextToken):
	  - Check for token size before writing to prevent buffer overflow.

2013-10-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Adjust FilterX::GetNextToken() for more safety.

	* src/filterx.h, src/filterhtml.h, src/filterlatex.h, src/filterrtf.h,
	  src/filterhtml.cpp, src/filterlatex.cpp, src/filterrtf.cpp,
	  (FilterX::GetNextToken):
	  - Add 'tokenSz' arg so that buffer overflow can be prevented.
	* src/wordseg.cpp (main):
	  - Adjust call to FilterX::GetNextToken() accordingly.

	* src/filterlatex.cpp (FilterLatex::GetNextToken):
	  - Implement the adjusted interface to make sure 'token' is never
	    overflown when writing data.
	* src/Makefile.am, +src/utils.h:
	  - Add "utils.h" for utility functions (first used in
	    FilterLatex::GetNextToken()).
	* src/convutil.h, src/utils.h, src/wordseg.cpp (N_ELM):